Use views border for ExtensionPopup

ExtensionPopup used native windows server to draw its border beforei
this change in the same way as Cocoa did. However, through hiding and
showing the bubble, the shadow was not reliably drawn. Now we change
to use views to draw its shadow. Other bubbles on Mac, as well as the
extension popup on Cocoa, will still use native windows server to draw
their shadows.

BUG=821739

Change-Id: Ie4fa4f4499e9feed1f266eb79ab878e7fee92ab4
Reviewed-on: https://chromium-review.googlesource.com/1003046
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Reviewed-by: Leonard Grey <lgrey@chromium.org>
Commit-Queue: Wei Li <weili@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549561}
Former-commit-id: 8de1e07f4f84b63ceca67736158649b0c1f7bf89